app/assets/stylesheets/pub.css.scss
body {
    background-color: $background_offwhite;
    font-family: courier new, menlo, monaco;
    padding-top: 30px;
}

button, p, h1, h2, h3, h4, h5, ul, li a {
//    font-family: courier new, menlo, monaco;
    font-family: helvetica neue, helvetica, arial, sans-serif;
}

.container-main {
    border: 1px solid #ddd;
    background-color: #fff;
}
@media only screen and (max-width: 767px) {
    .container-main {
        border: 0;
        background-color: transparent;
    }
}

.col-sidebar {
    padding-top: 20px;
}
.col-main {
    padding-top: 10px;
}

.row-footer,
.row-logo,
.row-nojs,
.row-humans {
    margin-top: 20px;
    margin-bottom: 20px;
}
.row-logo {
    position: relative;

    .link-checkout {
        position: absolute;
        right: 0;
        bottom: 0;
    }
}

